corrección de la carga de productos al DOM

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,44 @@
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
 
+.containerTitle{
+    background:rgb(26, 95, 41);
+    margin-top: 1rem;
+    box-shadow: 1px 1px 10px ;
+}
+.title{
+    color: rgb(216, 212, 212);
+    text-align: center;
+    font-weight: 700;
+    font-family:'Helvetica Neue', sans-serif;
+}
+
+.containerMain{
+    margin-top: 3rem;
+}
+
+.articles__cards{
+    justify-content: center;
+}
+.cards__item{
+   
+    margin: 15px;
+    max-width: 350px;
+    box-shadow: 1px 1px 6px rgb(0, 0, 0);
+    
+}
+.card{
+    border: none!important;
+}
+
+  .cards__paragraph {
+    font-size: large;
+    text-decoration: none;
+    text-align: center;
+  }
+
+  .cards__text {
+    font-weight: 700;
+  }
